--- a/css/infopage.css
+++ b/css/infopage.css
@@ -130,6 +130,14 @@ body{
     padding: 13px 15px;
     position: relative;
 }
+.name a{
+    color: black;
+    text-decoration: none;
+    transition: .3s color ease-in-out;
+}
+.name a:hover{
+    color: var(--hover);
+}
 .name::after{
     content: '';
     position: absolute;
@@ -177,6 +185,7 @@ body{
     font-size: 18px;
     font-family: 'Comic Sans MS';
     text-decoration: none;
+    transition: .3s color ease-in-out;
 }
 .right-place nav ul li:hover{
     cursor: pointer;
@@ -195,6 +204,7 @@ body{
     color: black;
     font-size: 16px;
     padding: 10px;
+    transition: .3s color ease-in-out;
 }
 .drop-content a:hover{
     color: var(--hover);
@@ -339,15 +349,17 @@ img{
     justify-content: center;
     padding: 15px 0;
 }
-.buttons .btn:not(.buttons .cv-button){
+.buttons .proj-button{
     width: 100px;
-    padding: 5px 30px;
+    padding: 3px 30px;
     margin: 0 20px;
     border: 2px solid black;
     border-radius: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
+    transition: .4s background-color ease 0s;
 }
 .buttons .cv-button{
     width: 100px;
@@ -358,8 +370,9 @@ img{
     justify-content: center;
     align-items: center;
     background-color: var(--hover);
+    transition: .4s background-color ease 0s;
 }
-.buttons .btn a:not(.buttons .cv-button a){
+.buttons .proj-button a{
     color: black;
     font-family: var(--comic);
     text-decoration: none;
@@ -370,25 +383,26 @@ img{
     font-family: var(--comic);
     text-decoration: none;
     font-size: 18px;
+    transition: .4s color ease-in-out;
 }
 .buttons .cv-button:hover{
-    transition: var(--trans1,border-color .4s ease 0s,background-color .4s ease 0s);
+    transition: var(--trans1, border-color .4s ease 0s, background-color .4s ease 0s);
     background-color: #fff;
     border: 2px solid var(--hover);
     cursor: pointer;
+    padding: 3.5px 30px;
 }
 .buttons .cv-button:hover a{
     color: black;
     transition: color 0.4s ease 0s, color .4s ease 0s;
 }
-.buttons .btn:hover:not(.buttons .cv-button){
+.buttons .proj-button:hover{
     transition: var(--trans1,border-color .4s ease 0s,background-color .4s ease 0s);
     background-color: var(--hover);
     border: none;
 }
-.buttons .btn:hover:not(.buttons .cv-button) a{
+.buttons .proj-button:hover a{
     color: #fff;
-    padding: 2px 0;
     transition: color 0.4s ease 0s, color .4s ease 0s;
 }
 .descriere{
@@ -466,6 +480,7 @@ img{
 }
 .number a, .email a{
     text-decoration: none;
+    transition: var(--trans2);
 }
 .number a:hover, .email a:hover{
     color: var(--hover);
